--- a/ToDoProject/Base.lproj/Main.storyboard
+++ b/ToDoProject/Base.lproj/Main.storyboard
@@ -31,6 +31,14 @@
                         </connections>
                     </tableView>
                     <navigationItem key="navigationItem" title="ToDo List" id="HgS-sL-t5y">
+                        <barButtonItem key="leftBarButtonItem" style="plain" id="Syr-No-pBb">
+                            <button key="customView" opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" id="XMD-KA-pDg">
+                                <rect key="frame" x="-33" y="-15" width="92" height="31"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="Button"/>
+                            </button>
+                        </barButtonItem>
                         <barButtonItem key="rightBarButtonItem" title="Item" image="plus" catalog="system" id="B0U-9P-dp1"/>
                     </navigationItem>
                 </tableViewController>
